# gba-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bg_debugger.cpp  cpu.cpp  cpu.h  cpu_debugger.h  debug.h  debug_emulator.sh  debug_tests.sh  dma.cpp  docker_compile_assembly.sh  docker_dump_obj.sh  emulator.cpp  gpu.cpp  gpu.h  layout.ini  memory_map.h  palette_debugger.cpp  ram.cpp  ram.h  ram_debugger.cpp  run_ci_tests.sh  run_emulator.sh  run_tests.sh  special_effects_debugger.cpp  special_effects_debugger.h  sprite_debugger.cpp  timer.cpp  utils.cpp  utils.h  window_debugger.cpp
.github/workflows/: build-and-test.yaml
scripts/: devkit_compile_assembly.sh  devkit_dump_object.sh
src/: bg_debugger.h  cpu.cpp  cpu.h  cpu_debugger.cpp  debug.h  dma.cpp  dma.h  eeprom.cpp  eeprom.h  emulator.cpp  flash.cpp  flash.h  gpu.cpp  gpu.h  input.cpp  input.h  memory_map.h  palette_debugger.h  ram.cpp  ram.h  ram_debugger.cpp  ram_debugger.h  sprite_debugger.cpp  sprite_debugger.h  state_io.cpp  state_io.h  timer.cpp  timer.h  window_debugger.h
src/debugger/: bg_debugger.cpp  bg_debugger.h  cpu_debugger.cpp  cpu_debugger.h  palette_debugger.cpp  palette_debugger.h  ram_debugger.cpp  ram_debugger.h  rom_loader.cpp  rom_loader.h  special_effects_debugger.h  sprite_debugger.cpp  sprite_debugger.h  state_debugger.cpp  state_debugger.h  window_debugger.cpp  window_debugger.h
tests/arm7tdmi/arm/: test.s  test_block_data_transfer.cpp  test_block_data_transfer.s  test_branch.cpp  test_branch_ahead.s  test_branch_before.s  test_branch_exchange.cpp  test_branch_exchange.s  test_branch_infinite_loop.s  test_branch_link.s  test_conditions.cpp  test_conditions.s  test_data_processing.cpp  test_halfword_and_signed_transfer.cpp  test_halfword_and_signed_transfer.s  test_multiply.cpp  test_multiply.s  test_push_pop.cpp  test_push_pop.s  test_single_data_swap.cpp  test_single_data_swap.s  test_single_data_transfer.cpp  test_single_data_transfer.s  test_software_interrupt.cpp  test_software_interrupt.s
tests/arm7tdmi/arm/data_processing/: adc.s  add.s  and.s  bic.s  cmn.s  cmp.s  eor.s  mov.s  mov_to_pc.s  mrs.s  msr.s  mvn.s  orr.s  rsb.s  rsc.s  sbc.s  sub.s  teq.s  tst.s
tests/arm7tdmi/thumb/: add_offset_to_sp.cpp  add_offset_to_sp.s  add_subtract.cpp  add_subtract.s  alu_operations.cpp  alu_operations.s  conditional_branch.cpp  conditional_branch.s  high_register_operations.cpp  high_register_operations.s  load_address.cpp  load_address.s  load_store_halfword.cpp  load_store_halfword.s  load_store_immediate_offset.cpp  load_store_immediate_offset.s  load_store_register_offset.cpp  load_store_register_offset.s  load_store_signed_halfword.cpp  load_store_signed_halfword.s  long_branch_with_link.cpp  long_branch_with_link.s  mov_cmp_add_sub_immediate.cpp  mov_cmp_add_sub_immediate.s  move_shifted_register.cpp  move_shifted_register.s  multiple_load_store.cpp  multiple_load_store.s  pc_relative_load.cpp  pc_relative_load.s  pc_relative_load_from_program.s  push_pop_registers.cpp  push_pop_registers.s  software_interrupt.cpp  software_interrupt.s  sp_relative_load_store.cpp  sp_relative_load_store.s  unconditional_branch.cpp  unconditional_branch.s
